package ca.mcmaster.se2aa4.mazerunner;

public enum Instruction {
    F, L, R;
}
