package ca.mcmaster.se2aa4.mazerunner;

public interface MazeAlgorithm {

    public String getPath(boolean factorized);
}
