package ca.mcmaster.se2aa4.mazerunner;

public enum Tile {
    WALL, EMPTY;
}
