package ca.mcmaster.se2aa4.mazerunner.benchmark;

public interface Benchmark {
    
    void runBenchmark();

    String generateReport();
}
