package ca.mcmaster.se2aa4.mazerunner.configuration;

public enum Method {
    RIGHTHAND, BFS;
}
